<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/anton_regular"
                    android:text="@string/detail_pengguna"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btSettings"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/ic_baseline_settings_24" />
                </LinearLayout>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUser"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@android:color/darker_gray"

                app:civ_border_color="@color/colorgit"
                app:civ_border_width="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/syahriz" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/anton_regular"
                android:includeFontPadding="false"
                android:text="@string/nama"
                android:textColor="@color/colorgit"
                android:textSize="24sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUser" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:includeFontPadding="false"
                android:text="@string/username"

                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername">

                <TextView
                    android:id="@+id/tvFollow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_people_outline_24"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/follows"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvRepo"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/ic_baseline_star_outline_24"
                    android:gravity="center_vertical"
                    android:text="@string/repos"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear">

                <TextView
                    android:id="@+id/tvBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/biodata"
                    android:textSize="14sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textSize="12sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBio" />

                <TextView
                    android:id="@+id/tvBlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="12dp"
                    android:drawableStart="@drawable/ic_baseline_link_24"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/blog"
                    android:textSize="12sp"

                    app:layout_constraintTop_toBottomOf="@id/tvEmail" />


            </LinearLayout>


            <Button
                android:id="@+id/btFavorite"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorfavorite"
                android:text="@string/favorite"

                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/linear2"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/btUnFavorite"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorfavorite"
                android:text="@string/unfavorite"
                android:visibility="gone"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/linear2" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                app:layout_constraintTop_toBottomOf="@id/btFavorite"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tabs" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView4"
        app:layout_constraintVertical_bias="0.519" />

</androidx.constraintlayout.widget.ConstraintLayout>


